--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,17 @@
 <resources>
-    <string name="app_name">Project2</string>
-    <string name="sp">The Thao</string>
-    <string name="sp2">Vietnam</string>
+    <string name="app_name">VnNews</string>
+    <string name="action_search">Search</string>
 
     <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
-    <string name="title_profile">Profile</string>
+    <string name="title_bookmarks">Bookmarks</string>
+    <string name="title_setting">Setting</string>
+
+
+    <string name="open">Open</string>
+    <string name="close">Close</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
 </resources>
